Error output:
Traceback (most recent call last):
File "./t-encrypt-sym.py", line 47, in <module>
assert passphrase_cb_called == 1, \
AssertionError: Callback called 2 times
FAIL: t-encrypt-sym.pyError output:
Traceback (most recent call last):
File "./t-encrypt-sym.py", line 47, in <module>
assert passphrase_cb_called == 1, \
AssertionError: Callback called 2 times
FAIL: t-encrypt-sym.py| rG GnuPG | |||
| rG0a6af6dc1299 agent: Fix regression with --newsymkey in loopback mode. | |||
| rGd9ea47f70284 agent: Fix regression with --newsymkey in loopback mode. | |||
| rM GPGME | |||
| rM32b80cf3c7d2 python: Workaround for a regression in GnuPG 2.2.21 | |||
Pretty please write a useful bug report; we need information on versions, OSes, compilers, any special environment, and all the steps you did to get the build failure. The configure run already prints a lot of useful information; you may want to extract them or provide a complete build log.
Yes, I forgot to include the full build log, I'm attaching it here. I've seen this in OpenSUSE Tumbleweed; the compiler is gcc10; and I can see this on any architecture. The test fails when building against gpg-2.2.21 but not with previous versions.
Thanks!
It is a pecularity of the test case. A new release is long overdue anyway, so please have a few days patience for a new release with a foxed test case.