agent: Fix regression with --newsymkey in loopback mode.

* agent/command.c (cmd_get_passphrase): Never repeat in loopback mode;
same as with !OPT_NEWSYMKEY.
--

In loopback mode there shall not be any repeat because the caller is
expected to do any confirmation before passing a new passphrase to
gpg.

Fixes-commit: d9e2dfa4c585de7c261fde13c18bd0f82415d6c3
as unfortunately released with 2.2.21.
GnuPG-bug-id: 4991

Signed-off-by: Werner Koch <wk@gnupg.org>